[package]
name = "oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.24", features = ["derive"] }
criterion = "0.3"

[lib]
name = "oxide"
path = "src/lib/lib.rs"

[[bin]]
name = "oxide"
path = "src/bin.rs"

[[bench]]
name = "chess_move"
harness = false

[[bench]]
name = "generate_moves"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1